[workspace]
resolver = "3"
members = ["common","launcher", "patch"]

[profile.release]
strip = true
opt-level = "z"
lto = true

[workspace.dependencies]
log = "0.4"
anyhow = "1.0"
egui = "0.33.0"
egui_extras = { version = "0.33.0", features = ["image"]}
eframe = "0.33.0"
rfd = "0.15"

[workspace.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
