[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
windows = { workspace = true}
anyhow = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
once_cell = "1.21"
dirs = "6.0.0"
flexi_logger = "0.31.7"
compile-time = "0.2.0"
